--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                     </p>
                     <div class="action">
                         <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://saleh-furqan.github.io/CandyCrush/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -573,8 +573,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/AnalogClock" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/AnalogClock/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -591,8 +591,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/DigitalClock" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/DigitalClock/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -609,8 +609,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/FlappyBird" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/FlappyBird/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -627,8 +627,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/ResponsiveImageGallery" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/ResponsiveImageGallery/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -645,8 +645,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/NotesApp" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/NotesApp/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -663,8 +663,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/Snake" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/Snake/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -681,8 +681,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/Tetris" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/Tetris/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -699,8 +699,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/SocialMediaApp" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/SocialMediaApp/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -717,8 +717,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/Pacman" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/Pacman/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -735,8 +735,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/SpotifyPageClone" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/SpotifyPageClone/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
@@ -753,8 +753,8 @@
                         doloribus atque repellendus ipsum, sit accusamus, commodi dolorem.
                     </p>
                     <div class="action">
-                        <a href="https://github.com/Saleh-Furqan" target="_blank">GitHub</a>
-                        <a href="./projects/" target="_blank">Try it!</a>
+                        <a href="https://github.com/Saleh-Furqan/WeatherApp" target="_blank">GitHub</a>
+                        <a href="https://saleh-furqan.github.io/WeatherApp/" target="_blank">Try it!</a>
                     </div>
                 </div>
                 <!--==================== </Project> ====================-->
