--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -16,6 +17,14 @@
         <div class="container">
             <a href="#"><h3>Saleh Furqan</h3></a>
             <ul class="menu">
+                <div class="nightMode">
+                    <span class="day material-symbols-outlined">
+                        wb_sunny
+                    </span>
+                    <span class="night material-symbols-outlined">
+                        nights_stay
+                    </span>
+                </div>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#education">Education</a></li>
@@ -25,6 +34,14 @@
             </ul>
 
             <ul class="menu2">
+                <div class="nightMode">
+                    <span class="day material-symbols-outlined">
+                        wb_sunny
+                    </span>
+                    <span class="night material-symbols-outlined">
+                        nights_stay
+                    </span>
+                </div>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#education">Education</a></li>
