--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <a href="#"><h3>Saleh Furqan</h3></a>
             <ul class="menu">
                 <div class="nightMode">
-                    <span class="day material-symbols-outlined">
+                    <span class="day day1 material-symbols-outlined">
                         wb_sunny
                     </span>
-                    <span class="night material-symbols-outlined">
+                    <span class="night night1 material-symbols-outlined">
                         nights_stay
                     </span>
                 </div>
@@ -35,10 +35,10 @@
 
             <ul class="menu2">
                 <div class="nightMode">
-                    <span class="day material-symbols-outlined">
+                    <span class="day day2 material-symbols-outlined">
                         wb_sunny
                     </span>
-                    <span class="night material-symbols-outlined">
+                    <span class="night night2 material-symbols-outlined">
                         nights_stay
                     </span>
                 </div>
