--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <span class="material-icons-sharp">functions</span>
                     </div>
                     <div class="inner-circle">
-                        <img src="./img/mn.jpg" alt="">
+                        <img src="./img/mb.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
         <h1>About me</h1>
         <div class="container">
             <div class="img">
-                <img src="./img/mn.jpg" alt="">
+                <img src="./img/mb.jpg" alt="">
             </div>
             <div class="info">
                 <p> 
