--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <span class="material-icons-sharp">functions</span>
                     </div>
                     <div class="inner-circle">
-                        <img src="./img/mb.jpg" alt="">
+                        <img src="./img/mk.jpg" alt="">
                     </div>
                 </div>
             </div>
