--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
                     <h1>A student learning web/game development</h1>
                     <h3>hi, I'm Saleh Furqan</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Doloribus veritatis harum, mollitia qui voluptate aperiam
-                        nesciunt numquam adipisci neque quod?
+                        Hi there! My name is Saleh Furqan and I am a computer science student with a passion for learning and creating. I am constantly seeking out new and interesting topics to explore, and I love using my knowledge and skills to build innovative projects.
                     </p>
                     <a href="#contact" class="btn btn-primary">Let's Talk</a>
                 </div>
@@ -107,38 +105,23 @@
             </div>
             <div class="info">
                 <p> 
-                    Natus unde mollitia, aut officia, optio doloremque libero 
-                    dolorum, distinctio quis quisquam quaerat? At natus animi 
-                    veniam doloribus, quam provident, explicabo dignissimos eaque, 
-                    in sunt minima quasi quibusdam architecto est adipisci voluptas 
-                    pariatur. Cupiditate illum optio laboriosam, molestias rem magnam 
-                    ratione, quisquam ea tempore laudantium quo quod delectus tempora 
-                    quasi quaerat?
+                    As a computer science student, I have a strong foundation in programming and problem solving, and I am always looking for opportunities to apply these skills to real-world problems.
+                    Whether it's working on a personal project or collaborating with a team, I thrive in environments where I can continuously learn and grow. In my free time, you can find me tinkering with new technologies, reading about the latest trends in the industry, or spending time with friends and family.
+                    I am excited to see where my passion for computer science takes me, and I am always open to new opportunities and experiences.
                 </p>
                 
                 <div class="read-more-content">
                     <p>
-                        Dolore, aliquid. Quaerat natus unde rem ex doloribus aspernatur
-                        eveniet nulla iste numquam dolores? Dolore obcaecati neque optio
-                        enim beatae dignissimos! Voluptatibus quia voluptates incidunt
-                        numquam nam ex, delectus nesciunt dicta aut. Suscipit qui fugiat
-                        quidem sit impedit molestias reiciendis quia saepe.
+                        I am currently in my first year at The Chinese University of Hong Kong where I have had the opportunity to participate in a number of projects and coursework that have helped me develop my skills and knowledge in computer science. Some of my notable accomplishments include creating small games, and web applications.
+                        In the future, I hope to use my skills and passion for computer science to make a positive impact on the world. Whether it's through developing new software, creating innovative applications, or working on cutting-edge technology, I am driven to make a difference and contribute to the field.
+
                     </p>
                     <p>
-                        Natus unde mollitia, aut officia, optio doloremque libero
-                        dolorum, distinctio quis quisquam quaerat? At natus animi
-                        veniam doloribus, quam provident, explicabo dignissimos eaque,
-                        in sunt minima quasi quibusdam architecto est adipisci voluptas
-                        pariatur. Cupiditate illum optio laboriosam, molestias rem magnam
-                        ratione, quisquam ea tempore laudantium quo quod delectus tempora
-                        quasi quaerat?
+                        In addition to my formal education, I have also taken a number of online courses and workshops to expand my knowledge and stay up-to-date with the latest technologies and trends in the field.
+                        In the future, I hope to use my skills and passion for computer science to make a positive impact on the world. Whether it's through developing new software, creating innovative applications, or working on cutting-edge technology, I am driven to make a difference and contribute to the field.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                        Vitae natus non odio dolores! Eius fugiat nihil eligendi? 
-                        Vero similique officiis nemo in deleniti iure laboriosam? 
-                        In quibusdam aut aliquam fuga doloribus repellat minus 
-                        expedita vel.
+                        Thank you for taking the time to learn more about me. I hope my portfolio gives you a sense of my interests and abilities, and I am always happy to discuss my work and experiences further.
                     </p>
                 </div>
                 <a class="read-more">Show more</a>
