--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <a class="read-more">Show more</a>
                 <a class="read-less">Show less</a>
-                <a href="./img/Saleh_Furqan_activities-resume (1).pdf" download class="btn btn-primary"><i class="uil uil-import"></i> Download CV</a>
+                <a href="./img/Saleh_Furqan_activities-resume (1).pd" download class="btn btn-primary"><i class="uil uil-import"></i> Download CV</a>
             </div>
         </div>
     </section>
