--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                     <div class="head">
                         <div class="profile-area">
                             <div class="avatar">
-                                <img src="./img/IMG_20210629_194823.jpg" alt="">
+                                <img src="./img/IMG_20210629_1948.jpg" alt="">
                             </div>
                             <div class="info">
                                 <h4>N/A</h4>
@@ -800,7 +800,7 @@
                     <div class="head">
                         <div class="profile-area">
                             <div class="avatar">
-                                <img src="./img/IMG_20210629_194823.jpg" alt="">
+                                <img src="./img/IMG_20210629_1948.jpg" alt="">
                             </div>
                             <div class="info">
                                 <h4>N/A</h4>
