--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <span class="material-icons-sharp">functions</span>
                     </div>
                     <div class="inner-circle">
-                        <img src="./img/mk2.jpg" alt="">
+                        <img src="./img/IMG_5571.jpg" alt="">
                     </div>
                 </div>
             </div>
